[package]
name = "citnames"
version = "4.0.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
description = "Rust crate to detect semantic of commands."
keywords = ["clang", "clang-tooling", "compilation-database"]
repository = "https://github.com/rizsotto/Bear"
homepage = "https://github.com/rizsotto/Bear"
documentation = "https://docs.rs/Bear/"
license = "GPL-3"
edition = "2021"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
path-absolutize = "3.1"
json_compilation_db = "0.3.0"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.2"
